--- a/SH-Photography-UI-Net/ClientApp/src/global.scss
+++ b/SH-Photography-UI-Net/ClientApp/src/global.scss
@@ -1,7 +1,7 @@
 @import "custom";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300|Raleway:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300|Raleway:300&display=block");
 
 @import-normalize;
 
